Fix spacing

--- a/_sass/cans.sass
+++ b/_sass/cans.sass
@@ -20,7 +20,7 @@ h2
   color: #444 !important
   display: block
   font-size: 2em
-  line-height: 1.5em
+  line-height: 30px
   margin: 0
   transform: translateY(-10px)
 body
@@ -32,7 +32,7 @@ body
     display: block
     text-align: center
     font-size: 40px
-    transform: translateY(-26px)
+    transform: translateY(-8px)
 .display
   h3
     color: black
